// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`show COVID-19 guidance text in England 1`] = `
<p>
  How does your project meet our funding priorities?
</p>
<p>
  A good application should do at least one of these three things:
</p>
<ol>
  <li>
    build strong relationships in and across communities
  </li>
  <li>
    improve the places and spaces that matter to communities
  </li>
  <li>
    help more people to reach their potential, by supporting them at the earliest possible stage.
  </li>
</ol>
<p>
  We're also keen to support people and communities most adversely impacted by COVID-19. We can support you to:
</p>
<ul>
  <li>
    continue to deliver activity, whether you are responding to the immediate crisis or supporting recovery activity
  </li>
  <li>
    change and adapt, becoming more resilient in order to respond to new and future challenges.
  </li>
</ul>
<p>
  <strong>
    You can write up to 150 words for this section,
but don't worry if you use less.
  </strong>
</p>
`;

exports[`show COVID-19 guidance text in England 2`] = `
<p>
  How does your project meet our funding priorities?
</p>
<p>
  A good application should do at least one of these three things:
</p>
<ol>
  <li>
    build strong relationships in and across communities
  </li>
  <li>
    improve the places and spaces that matter to communities
  </li>
  <li>
    help more people to reach their potential, by supporting them at the earliest possible stage.
  </li>
</ol>
<p>
  We're also keen to support people and communities most adversely impacted by COVID-19. We can support you to:
</p>
<ul>
  <li>
    continue to deliver activity, whether you are responding to the immediate crisis or supporting recovery activity
  </li>
  <li>
    change and adapt, becoming more resilient in order to respond to new and future challenges.
  </li>
</ul>
<p>
  <strong>
    You can write up to 150 words for this section,
but don't worry if you use less.
  </strong>
</p>
`;

exports[`show COVID-19 guidance text outside England when project is responding to COVID-19 1`] = `
<p>
  <strong>
    We will prioritise:
  </strong>
</p>
<ol>
  <li>
    organisations supporting people and communities
who experience disproportionate challenge and
difficulty as a result of the COVID-19 crisis
  </li>
  <li>
    organisations providing services and support
for vulnerable people, for which there will be
increased demand as a result of the COVID-19 crisis
  </li>
  <li>
    organisations which connect communities and support
communities to work together to respond to COVID-19.
  </li>
</ol>
<p>
  You can tell us if your project meets more
than one priority, but don't worry if it doesn't.
</p>
<p>
  <strong>
    You can write up to 150 words for this section,
but don't worry if you use less.
  </strong>
</p>
`;

exports[`show combined guidance text as a fallback 1`] = `
<p>
  <strong>
    We will prioritise:
  </strong>
</p>
<ol>
  <li>
    organisations supporting people and communities
who experience disproportionate challenge and
difficulty as a result of the COVID-19 crisis
  </li>
  <li>
    organisations providing services and support
for vulnerable people, for which there will be
increased demand as a result of the COVID-19 crisis
  </li>
  <li>
    organisations which connect communities and support
communities to work together to respond to COVID-19.
  </li>
</ol>
<p>
  You can tell us if your project meets more
than one priority, but don't worry if it doesn't.
</p>
<p>
  <strong>
    You can write up to 150 words for this section,
but don't worry if you use less.
  </strong>
</p>
`;

exports[`show regular guidance text outside England when project is not responding to COVID-19 1`] = `
<p>
  <strong>
    We will prioritise:
  </strong>
</p>
<ol>
  <li>
    organisations supporting people and communities
who experience disproportionate challenge and
difficulty as a result of the COVID-19 crisis
  </li>
  <li>
    organisations providing services and support
for vulnerable people, for which there will be
increased demand as a result of the COVID-19 crisis
  </li>
  <li>
    organisations which connect communities and support
communities to work together to respond to COVID-19.
  </li>
</ol>
<p>
  You can tell us if your project meets more
than one priority, but don't worry if it doesn't.
</p>
<p>
  <strong>
    You can write up to 150 words for this section,
but don't worry if you use less.
  </strong>
</p>
`;
